@@ -19,6 +19,7 @@ import lombok.AccessLevel;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import lombok.Singular;
 import org.gbif.api.model.checklistbank.NameUsage;
 import org.gbif.api.model.checklistbank.NameUsageMatch;
 import org.gbif.api.v2.NameUsageMatch2;
@@ -46,7 +47,7 @@ public class Interpreter {
   private static final MultiinputTemporalParser temporalParser = MultiinputTemporalParser.create();
   private static final CountryParser countryParser = CountryParser.getInstance();
   private static final Set<String> SUSPECTED_TYPE_STATUS_VALUES =
-      new HashSet<>(Arrays.asList("?", "possible", "possibly", "potential", "maybe", "perhaps"));
+      Set.of("?", "possible", "possibly", "potential", "maybe", "perhaps");
 
   public static InterpretedResult<List<String>> interpretStringList(
       Map<String, String> valuesMap, DwcTerm term) {
@@ -326,13 +327,11 @@ public class Interpreter {
       }
 
       if (nameUsageMatch.getClassification() != null) {
-        List<RankedName> rankedNames = new ArrayList<>();
-        taxonDataBuilder.taxonClassification(rankedNames);
         nameUsageMatch
             .getClassification()
             .forEach(
                 c -> {
-                  rankedNames.add(c);
+                  taxonDataBuilder.rankedName(c);
                   taxonKeys.add(c.getKey());
                 });
       }
@@ -388,6 +387,8 @@ public class Interpreter {
     private Integer usageKey;
     private String usageName;
     private Rank usageRank;
+
+    @Singular("rankedName")
     private List<RankedName> taxonClassification;
 
     private Set<Integer> taxonKeys;
